[gd_scene load_steps=18 format=3 uid="uid://fkkjrgm2pbhn"]

[ext_resource type="Script" uid="uid://dcbs58v14eenv" path="res://scripts/menu.gd" id="1_7jp70"]
[ext_resource type="Script" uid="uid://buqaipatv1lkm" path="res://scripts/parallax_background.gd" id="1_13sgg"]
[ext_resource type="Texture2D" uid="uid://b8vgj0dabgab2" path="res://assets/bg/sky.png" id="2_i6lef"]
[ext_resource type="Script" uid="uid://bsbcad8h7ir0m" path="res://scripts/settings.gd" id="2_i42df"]
[ext_resource type="Texture2D" uid="uid://dxsob3ih0ljvp" path="res://assets/bg/cloud.png" id="3_70i5f"]
[ext_resource type="Texture2D" uid="uid://cd6786e7annhl" path="res://assets/bg/rooms/room1.png" id="5_ufwb2"]
[ext_resource type="Texture2D" uid="uid://bwttrrn16gde2" path="res://assets/bg/art/art1.png" id="6_6cdou"]
[ext_resource type="Texture2D" uid="uid://dp8csrh220xeo" path="res://exports/logo, art n stuff/itchiobanner.png" id="7_i42df"]
[ext_resource type="FontFile" uid="uid://btqyhp5s88ei2" path="res://assets/fonts/Delius-Regular.ttf" id="8_7jp70"]
[ext_resource type="Script" uid="uid://dafy6vwcfjdrk" path="res://scripts/buttonAudio.gd" id="10_7jp70"]
[ext_resource type="AudioStream" uid="uid://d3t63m1qvixkv" path="res://assets/audio/sfx/back.wav" id="12_i42df"]
[ext_resource type="AudioStream" uid="uid://02eg8op8sim0" path="res://assets/audio/sfx/confirm.wav" id="13_7jp70"]
[ext_resource type="AudioStream" uid="uid://uopaey8ag42b" path="res://assets/audio/sfx/hover.wav" id="14_mxgkd"]
[ext_resource type="AudioStream" uid="uid://ubtujg2xu02n" path="res://assets/audio/music/music1.mp3" id="15_7jp70"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_7jp70"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_mxgkd"]
color = Color(0.19921, 0.428185, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_g6gyw"]
color = Color(0.405815, 0.592137, 1, 1)
thickness = 6

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7jp70")

[node name="settingsVar" type="Node" parent="."]
script = ExtResource("2_i42df")

[node name="fullBG" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="fullBG"]
layer = -3
script = ExtResource("1_13sgg")

[node name="ParallaxLayer" type="ParallaxLayer" parent="fullBG/ParallaxBackground"]
z_index = -3
motion_mirroring = Vector2(512, 0)

[node name="sky" type="Sprite2D" parent="fullBG/ParallaxBackground/ParallaxLayer"]
z_index = -3
position = Vector2(256, 256)
scale = Vector2(4, 4)
texture = ExtResource("2_i6lef")

[node name="Sprite2D" type="Sprite2D" parent="fullBG/ParallaxBackground/ParallaxLayer"]
position = Vector2(256, 256)
scale = Vector2(4, 4)
texture = ExtResource("3_70i5f")

[node name="bg" type="Node2D" parent="fullBG"]
z_index = -1

[node name="room" type="Sprite2D" parent="fullBG/bg"]
position = Vector2(256, 256)
scale = Vector2(4, 4)
texture = ExtResource("5_ufwb2")

[node name="art" type="Sprite2D" parent="fullBG/bg"]
position = Vector2(256, 256)
scale = Vector2(4, 4)
texture = ExtResource("6_6cdou")

[node name="Itchiobanner" type="Sprite2D" parent="."]
position = Vector2(256, 100)
scale = Vector2(0.65, 0.65)
texture = ExtResource("7_i42df")

[node name="button" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -107.0
offset_top = -317.0
offset_right = 107.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("10_7jp70")

[node name="start" type="Button" parent="button"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 40
text = "Start Game
"

[node name="stats" type="Button" parent="button"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 40
text = "Stats"

[node name="settings" type="Button" parent="button"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="quit" type="Button" parent="button"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -76.0
offset_right = 150.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="Settings"]
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_right = 256.0
offset_bottom = 77.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 60
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="contents" type="VBoxContainer" parent="Settings"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -77.0
offset_right = 128.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2

[node name="autosaveLabel" type="Label" parent="Settings/contents"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 20
text = "Autosave Interval"
horizontal_alignment = 1
vertical_alignment = 1

[node name="autosave" type="HBoxContainer" parent="Settings/contents"]
layout_mode = 2
alignment = 1

[node name="label" type="Label" parent="Settings/contents/autosave"]
layout_mode = 2
text = "30s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="autosaveInterval" type="HSlider" parent="Settings/contents/autosave"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_7jp70")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_mxgkd")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_g6gyw")
min_value = 30.0
max_value = 120.0
value = 30.0
rounded = true

[node name="musicLabel" type="Label" parent="Settings/contents"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 20
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music" type="HBoxContainer" parent="Settings/contents"]
layout_mode = 2
alignment = 1

[node name="label" type="Label" parent="Settings/contents/music"]
layout_mode = 2
text = "75%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="musicVolume" type="HSlider" parent="Settings/contents/music"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_7jp70")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_mxgkd")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_g6gyw")
value = 75.0
rounded = true

[node name="sfxLabel" type="Label" parent="Settings/contents"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 20
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx" type="HBoxContainer" parent="Settings/contents"]
layout_mode = 2
alignment = 1

[node name="label" type="Label" parent="Settings/contents/sfx"]
layout_mode = 2
text = "75%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfxVolume" type="HSlider" parent="Settings/contents/sfx"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_7jp70")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_mxgkd")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_g6gyw")
value = 75.0
rounded = true

[node name="back" type="Button" parent="Settings"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -70.0
offset_right = 49.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="stats" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -76.0
offset_right = 150.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="stats"]
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_right = 256.0
offset_bottom = 77.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 60
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="splashText" type="Label" parent="stats"]
z_index = 1
layout_mode = 2
offset_top = 195.0
offset_right = 300.0
offset_bottom = 244.0
theme_override_colors/font_color = Color(1, 1, 0.26, 1)
theme_override_font_sizes/font_size = 13
text = "YOU SPENT MORE TIME LETTING HIM DIE THAN PLAYING THE GAME??"
horizontal_alignment = 1
autowrap_mode = 2

[node name="contents" type="VBoxContainer" parent="stats"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -90.0
offset_right = 128.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="aliveTitle" type="Label" parent="stats/contents"]
layout_mode = 2
text = "Longest time you kept Pip alive:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="aliveTime" type="Label" parent="stats/contents"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="killTitle" type="Label" parent="stats/contents"]
layout_mode = 2
text = "Mice you've 💀'ed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="killed" type="Label" parent="stats/contents"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "281"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="stats"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -70.0
offset_right = 49.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="fg" type="ColorRect" parent="."]
visible = false
z_index = 20
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="link" type="Button" parent="."]
texture_filter = 2
layout_mode = 0
offset_top = 480.0
offset_right = 175.0
offset_bottom = 514.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_7jp70")
theme_override_font_sizes/font_size = 20
text = "created by j4y_boi"
flat = true

[node name="back" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_i42df")
bus = &"SFX"

[node name="confirm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_7jp70")
bus = &"SFX"

[node name="hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_mxgkd")
bus = &"SFX"

[node name="bgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_7jp70")
autoplay = true
bus = &"Music"

[connection signal="mouse_entered" from="button/start" to="button" method="_on_start_mouse_entered"]
[connection signal="pressed" from="button/start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="button/stats" to="button" method="_on_stats_mouse_entered"]
[connection signal="pressed" from="button/stats" to="." method="_on_stats_pressed"]
[connection signal="mouse_entered" from="button/settings" to="button" method="_on_settings_mouse_entered"]
[connection signal="pressed" from="button/settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="button/quit" to="button" method="_on_quit_mouse_entered"]
[connection signal="pressed" from="button/quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="Settings/back" to="button" method="_on_back_mouse_entered"]
[connection signal="pressed" from="Settings/back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="stats/back" to="button" method="_on_back_mouse_entered"]
[connection signal="pressed" from="stats/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="link" to="." method="_on_link_pressed"]
